# GCS

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  DUMMY  LICENSE  README.md  VERSION  complexity_report.txt  debug.sh  gcs_rocket  makefile  proto_manual.sh  release.sh  requirements.txt  rocket.bat  rocket.py  rocket_logging.py  setup.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  build_and_test_cpp.yml  cpp_gtest.yml  python_complexity.yml
backend/: __init__.py  config.ini  config.py  device_emulator.py  event_viewer.py  frontend_api.py  mach.py  pendant_daemon.py  pendant_emulator.py
backend/flight_data_replay/: replay_engine.py
backend/include/: debug_functions.hpp  process_logging.hpp  sequence.cpp  sequence.hpp  sequence_lock.cpp  sequence_lock.hpp  subprocess_logging.hpp
backend/includes_python/: ansci.py  mach.py  metric.py  process_logging.py  service_helper.py
backend/middleware/: README.md  _absl_log_fix.cpp  lora_interface.hpp  main.cpp  middleware.cpp  server.cpp  socket_interface.cpp  socket_interface.hpp  test_interface.cpp  test_interface.hpp  test_uart_interface.cpp  test_uart_interface.hpp  uart_interface.cpp  uart_interface.hpp  uart_socket_bridge.cpp  uart_socket_bridge.hpp
backend/middleware/payloads/: AVHelper.hpp  AV_TO_GCS_DATA_1.hpp  AV_TO_GCS_DATA_2.hpp  AV_TO_GCS_DATA_3.hpp  ByteParser.hpp  GCS_TO_AV_STATE_CMD.hpp  GCS_TO_GSE_STATE_CMD.hpp  GSE_TO_GCS_DATA_1.hpp  GSE_TO_GCS_DATA_2.hpp  ProtoHelper.hpp
backend/proto/: README.md
backend/proto/common/: AVStateFlags.proto  FlightState.proto  GSEErrors.proto  GSEStateFlags.proto  PacketMeta.proto  packet_id.proto
backend/proto/payloads/: AV_TO_GCS_DATA_1.proto  AV_TO_GCS_DATA_2.proto  AV_TO_GCS_DATA_3.proto  GCS_TO_AV_STATE_CMD.proto  GCS_TO_GSE_STATE_CMD.proto  GSE_TO_GCS_DATA_1.proto  GSE_TO_GCS_DATA_2.proto  GSE_TO_GCS_DATA_3.proto
backend/replay_system/: ABOUT.md  packet_type.py  replay_engine.py
backend/replay_system/mission_data/2025-05-04/: AV_TO_GCS_DATA_1.csv  AV_TO_GCS_DATA_2.csv
backend/replay_system/mission_data/20250504/: AV_TO_GCS_DATA_1.csv  AV_TO_GCS_DATA_3.csv  GCS_TO_AV_STATE_CMD.csv  GSE_TO_GCS_DATA_1.csv  GSE_TO_GCS_DATA_2.csv  GSE_TO_GCS_DATA_3.csv
backend/replay_system/mission_data/IREC2025/: AV_TO_GCS_DATA_2.csv  GSE_TO_GCS_DATA_1.csv  GSE_TO_GCS_DATA_2.csv
backend/simulation/: README.md  run_simulation.py  simulation.ini
backend/simulation/cache/5d897658c9635750fcac11db03a49c3c2987d1c0/: data.json
backend/simulation/rocket_sim/: __init__.py  config.py  engine.py  environment.py  flight.py  flight_simulation.py  fuel.py  rocket.py
backend/simulation/sim_data/: flightdataexport.csv
backend/tests/: CMakeLists.txt  byteparser.cpp  dummy.cpp
backend/tests/cpp_tests/: byteparser.cpp
backend/tests/python_tests/: conftest.py  test_cli_interactions.py  test_cli_modes_start.py  test_dummy.py  test_metric.py
backend/tools/: _pygame_controller_debug.py  controllers.json  debug_e5.py  debug_e5_read.py  debug_e5_read_throughput_test.py  debug_e5_spam_packet.py  debug_gcs_packet.py  debug_rpi_pendant.py  debug_websocket.py  device_emulator.py  manual_fill_weight.py  metric.py  pendant_emulator.py  temp.py  zeromq_debug_sub_raw.py
cli/: README.md  __init__.py  ascii_art_logo.txt  proccess.py  rocket_logging.py  start_emulator.py  start_event_viewer.py  start_frontend_api.py  start_frontend_webserver.py  start_middleware.py  start_middleware_build.py  start_pendant_daemon.py  start_pendant_emulator.py  start_replay_system.py  start_simulation.py  start_socat.py
config/: config.ini  config.py  replay.ini  simulation.ini
docker/: Dockerfile.dev
docs/: application_layers.md  development.md  glossary.md  pendant_emulator.md  setup.md  system_design.md  usage.md
documentation/: setup.md  usage.md
frontend/: flask_server.py  frontend.md  interface_items.md  server.py
frontend/config/: tailwind.input.css
frontend/scripts/: tailwind_build.bat  tailwind_build.sh  tailwind_dev.bat  tailwind_dev.sh
frontend/static/: index.html  layout1.html  layout2.html  layout3.html  layout4.html  layout5.html  oldgui.html  test.html  testingd3.html
frontend/static/Data/: testData.csv
frontend/static/css/: bootstrap.css  oldgui.css  tailwind.css  tailwind.input.css  test.css
frontend/static/data/: testData2.csv
frontend/static/debug/: api.html
frontend/static/img/icons/: license.txt
frontend/static/js/: GCS_3DAnimation.js  GCS_API.js  GCS_DataVis.js  GCS_Display.js  GCS_Graphs.js  GCS_Interface.js  GCS_Rocket.js  GCS_RocketViewer.js  GCS_Testing.js  GCS_Three.js  rocket_viewer.js  test.js
frontend/static/js/three/: Temp.js
frontend/static/models/: rocket_model.glb
frontend/static/testingd3/: linegraph.js  script.js  script2.js  script3.js
frontend/templates/: layout.html  module_3d_rocket.html  module_altitude.html  module_aux_system_data.html  module_auxcontrols.html  module_auxdata.html  module_av_data.html  module_avionics.html  module_avionics_status.html  module_continuity_buttons.html  module_continuity_results.html  module_continuitycheck.html  module_controls_other.html  module_errorlog.html  module_flags.html  module_flight_state.html  module_flight_status_gps.html  module_flightstate.html  module_futurecontrols.html  module_graphs.html  module_hmi.html  module_info.html  module_logos_project_info.html  module_max_altitude.html  module_misc_data.html  module_othercontrols.html  module_password.html  module_payload.html  module_pop_test.html  module_poptest.html  module_position.html  module_radio.html  module_rocket.html  module_telemetry.html  module_video.html  module_video_launchpad.html  module_video_rocket.html
frontend/templates/examples/: example_svgmanip.html
middleware/: socket_interface.hpp
notes/: algo_relevance.md  brainstorming.md  data.md  old_esp32_rx_code.cpp
notes/assets/: application_layer_diagram.excalidraw
scripts/: __proto_import_fix.sh  proto_manual.sh  python-path.sh  release.sh  test_manual_all.sh  test_manual_cpp.sh  test_manual_python.sh
(+1 files in other folders)
